added class for content; minor color update hover

--- a/basics/recipe/style.css
+++ b/basics/recipe/style.css
@@ -21,6 +21,10 @@ a:visited {
   color: #295a80;
 }
 
+a:hover {
+  color: #ee976f;
+}
+
 body {
   background: #cdc;
   width: 75em;
@@ -44,7 +48,6 @@ body {
   flex: 1;
   flex-direction: row;
   flex-wrap: wrap;
-  padding: 0 .3em 0 .3em;
 }
 
 #content-row1 {
@@ -92,4 +95,8 @@ body {
   display: block;
   text-indent: 5em;
   font-size: .65em;
+}
+
+.body-content {
+  padding: 0 .3em 0 .3em;
 }
