--- a/basics/recipe/style.css
+++ b/basics/recipe/style.css
@@ -27,7 +27,8 @@ a:hover {
 
 body {
   background: #cdc;
-  width: 75em;
+  min-width: 45em;
+  width: 60em;
   font: 1.3em 'Arial', Sans-Serif;
   margin-left: auto;
   margin-right: auto;
@@ -56,7 +57,7 @@ body {
 }
 
 #content-row2 {
-  flex: 1 1 20em;
+  flex: 1 1 10em;
 }
 
 #title {
@@ -66,11 +67,17 @@ body {
   background: #fff;
 }
 
-#dish-image {
-  width: 25em;
+#dish-image {  
+  width: 16em;
   float: left;
   height: auto;
-  margin-right: .2em;
+  margin-top: .6em;
+  margin-right: .3em;
+  border: .5px solid #1c4467;
+}
+
+#blurb {
+  text-indent: 24px;
 }
 
 #steps ol {
